# composer2

./: .gitattributes  .gitignore  CHANGELOG.md  COLAB_QUICKSTART.md  COLAB_TRAINING.md  Dockerfile  Makefile  README.md  articulation_schema.yaml  conftest.py  demo.mid  docker-compose.yml  emotion_humanizer.py  filelist.txt  generated_events.json  generated_events_wav.json  groove_model.pkl  hparams.json  json2midi.py  loops.json  metrics.json  metrics_by_tag.json  metrics_epoch.csv  mkdocs.yml  modular_composer.py  mypy.ini  notes.csv  ocr_process.py  out_12-8.mid  out_4-4.mid  out_6-8_to_4-4.mid  out_sparklewav.mid  out_ujamsparkle.mid  outguitar.mid  output.mid  output.txt  outwav.mid  outwavguitar.mid  phrase.run.json  preds_preview.json  (+20 more)
.codex/: setup.sh
.devcontainer/: Dockerfile  devcontainer.json
Backup/: download.json
api/: sax_server.py  server.py  session_manager.py  vocal_server.py
checkpoints/: bass_boundary_256.run.json  bass_boundary_final.run.json  bass_boundary_only.run.json  bass_boundary_sweep.run.json  bass_diag.run.json  bass_diag_antisat.run.json  bass_diag_posnorm.run.json  bass_duv_light.run.json  bass_duv_v1.run.json  bass_fastdev.run.json  bass_fixth.run.json  bass_focus_boundary.run.json  bass_lstm_final.run.json  bass_lstm_low.run.json  bass_lstm_mid.run.json  bass_lstm_prod.run.json  bass_mps_mid.run.json  bass_mps_recover.run.json  bass_mps_smoke.run.json  bass_mps_tune.run.json  bass_mps_tuned.run.json  bass_recover.run.json  bass_recover_auto.run.json  bass_recover_pw3.run.json  bass_short.run.json  bass_tfm_fix.run.json  bass_viz.run.json  bass_weakpos.run.json  epoch=0-step=2.ckpt  guitar_lstm_prod.run.json  hparams.json  metrics.json  metrics_by_tag.json  metrics_epoch.csv  preds_preview.json  tfm_fix.run.json  tfm_fix_dur.run.json  tfm_fix_norm.run.json  tfm_fix_norm_dur.run.json  tfm_fixedth.run.json  (+3 more)
conf/: data.yaml  model.yaml
config/: main_cfg.yml  main_cfg_example.yml  sax_demo.yml
configs/: mixing.yaml  velocity_model.yaml
cyext/: __init__.py  __init__.pyi  humanize.pyi  humanize.pyx
data/: __init__.py  amp_presets.yml  arrangement_overrides.json  articulation_data.py  articulation_datamodule.py  articulation_dataset.py  cc_map.yml  chordmap.json  chordmap.yaml  drum_patterns.yml  duration_complete.csv  duration_fixed.csv  duration_maestro.csv  duration_sample.csv  duration_test.csv  emotion_profile.yaml  export_pretty.py  expression_map.yml  expression_maps.yml  heatmap.json  obligato_library.yaml  preset_library.yml  processed_chordmap_with_emotion.yaml  rhythm_library.yml  riff_library.yaml  tempo_curve.json  velocity.csv  velocity_sample.csv
data_ops/: augment.py  auto_tag.py
docs/: ARCH.md  ROADMAP_canvas.md  ai.md  ai_generator.md  architecture.md  arrangement_features.md  audio_pipeline.md  aux_features.md  changelog.md  cli_audio_to_midi_batch.md  controls.md  corpus.md  data_note_schema.md  effects.md  groove.md  groove_sampler.md  groove_sampler_v2.md  humanizer.md  index.md  live_tips.md  lora_training.md  lyrics_align.md  ml_articulation.md  piano_beta.md  piano_gamma.md  plugin_guide.md  quick_start.md  slakh2100.md  strings_generator.md  tone.md  vocal_generator.md
eval/: blec.py
examples/: drumgen_tempo_curve.ipynb  groove_sampler.ipynb  in.mid
generator/: __init__.py  articulation.py  base_part_generator.py  bass_generator.py  bass_utils.py  chord_generator.py  chord_voicer.py  drum_generator.py  guitar_generator.py  import pytest.py  melody_generator.py  obligato_generator.py  piano_generator.py  piano_template_generator.py  piano_transformer.py  riff_from_vocal.py  riff_generator.py  sax_generator.py  strings_generator.py  vocal_generator.py  voicing_density.py
generators/: chord_generator.py
groove_sampler/: loop_ingest.py
manifests/: lamd_bass_enriched_full.jsonl  lamd_guitar_enriched.jsonl  lamd_strings_enriched.jsonl
midi_drums/: DL. 契りきぬ 達郎 Stems.mid  DL_Drums.mid  DL_Nostalgic_Drums.mid  DL_Remix_emotional_folk_Drums.mid  DL_warm_Drums.mid  Drums.mid  Stems.mid  _Remix_Drums.mid  basic_kick_snare.mid  katyan_soul.mid  koumoururiko.mid  ninjyouupbeat+.mid  ninjyouuranagaya.mid  omokage.mid  omokage_stem.mid  rock_pattern.mid  simple_4_4.mid  sinjyufujin_warm_ruriko_Stems.mid  sumimaru_ruriko.mid  tigiri_englishedition.mid  watasino Stems.mid  扇野　ロング (Remix) Stems (1).mid
midi_out/: conversion_log.json  hanamokatanamo.mid  katyan_ruriko.mid  katyan_taturo.mid  koumouJapaneseFolk.mid  koumou_heartfullpop_ruriko.mid  ninjyouupbeat+.mid  nostalgic_ninjyou.mid  omokagedeepemotionruriko.mid  omokagewarmfolk.mid  rocky_japanesefolk.mid  ruriko_tyusingura_warm_pop.mid  sinpen_melancholic.mid  tracks.mid  umon_EnglishEdition.mid  yuumoyanonaka.mid
midi_output/: generated_song_orenonyoubou_shudaika.mid  output.mid
mixing_assistant/: __init__.py  download_ref_masters.py  feature_extractor.py
ml_models/: articulation_tagger.py
model/: groove_ngram_wav.pkl
models/: lyrics_alignment.py  phrase_transformer.py
modular_composer/: __init__.py  cli.py  drum_generator.py  perc_generator.py
notebooks/: quick_start.ipynb
realtime/: alignment_ws.py  phrase_ws.py  rtmidi_streamer.py  ws_bridge.py  ws_vocal_bridge.py
requirements/: base.txt  extra-audio.txt  extra-ml.txt
scripts/: align_lyrics.py  audio_to_velocity_csv.py  ci_groove.sh  ci_groove_bass.sh  convert_duv_to_ts.py  download_slakh_midi.py  dump_rhythm_library_map.py  dump_tree_v3.py  eval_articulation.py  eval_duv.py  eval_pedal.py  export_duv_torchscript.py  extract_piano_voicings.py  extract_timbre_dataset.py  predict_duv.py  predict_pedal.py  predict_phrase.py  randomize_stem_cli.py  sample_phrase.py  scan_loops.py  segment_phrase.py  setup_project.sh  sweep_phrase.py  synthesize_vocal.py  train_all_base_colab.sh  train_articulation.py  train_controls.py  train_duration.py  train_duv_improved.py  train_lyrics_align.py  train_pedal.py  train_phrase.py  train_velocity.py  tune_pedal.py
streamlit_app/: gui.py  phrase_gui.py  visualise_groove.py
tempo_midi/: check_midi_tempo.py  fix_midi_tempo.py
tests/: _asyncio_plugin.py  (+261 more)
(+21249 files in other folders)
