[metadata]
name = modular_composer
version = 0.1.0
description = OtoKotoba Modular Composer

[options]
# コードパッケージのみ自動検出
packages = find:
install_requires =
    music21>=9.6.0
    pretty_midi>=0.2.10
    numpy>=1.26.4,<2.0.0
    PyYAML>=6.0
    pydantic>=2.7
    pydub>=0.25
    mido>=1.3.0
    scipy>=1.10
    tomli>=2.0

[options.packages.find]
# コード以外のトップレベルフォルダを除外
exclude =
    data
    config
    midi_output
    Backup
    アーカイブ
