[metadata]
name = modular_composer
version = 0.1.0
description = OtoKotoba Modular Composer

[options]
# コードパッケージのみ自動検出
packages = find:
install_requires =
    music21>=7.3
    numpy>=1.26
    click>=8.1
    pretty_midi>=0.2

[options.extras_require]
gui =
    streamlit>=1.32
rnn =
    torch==2.3.0
    pytorch_lightning==2.2.4
    optuna==3.6.1
live =
    mido>=1.3
    python-rtmidi>=1.5

[options.packages.find]
# コード以外のトップレベルフォルダを除外
exclude =
    data
    config
    midi_output
    Backup
    アーカイブ
    archived*
