[options.extras_require]
ai =
    torch>=2.3
    transformers>=4.42
audio =
    librosa>=0.10
    soundfile>=0.12
test =
    scikit-learn>=1.3
    mido>=1.3
    pretty_midi>=0.2
    websockets>=12.0
    fastapi>=0.85
    httpx>=0.23
    pytest-asyncio>=0.20
    starlette>=0.25
ml =
    torch>=2.3
    pytorch-lightning>=2.3
    hydra-core
    wandb
